<resources>
    <string name="app_name">Tp2_Marlond_Augustin</string>
    <string name="courriel">Email</string>
    <string name="mot_DePasse">Password</string>
    <string name="titre_connexion">Home page</string>
    <string name="salutation">Greetings </string>
    <string name="connexion">Log in</string>
    <string name="inscription">Register</string>
    <string name="titre_inscription">Create an account</string>
    <string name="confirmer">Confirm your password</string>
    <string name="deconnexion">Log out</string>
    <string name="profil">Modify your profil</string>
    <string name="nom">Name</string>
    <string name="nom_inscription">Input your name</string>
    <string name="mettreAJour">Update your profile</string>
    <string name="article">Create an article</string>
    <string name="titre">Title</string>
    <string name="soustitre">Subtitle</string>
    <string name="messsage">Content</string>
    <string name="titre_article">Share your opinion to the other users</string>
    <string name="mettre_a_jour">Update your article</string>
    <string name="effacer">Delete your article</string>
    <string name="articles">Articles from our members</string>
    <string name="modify_article">Modify an article</string>
    <string name="mdp_erreur">The length of your password should be at least 10 characters</string>
    <string name="couriel_erreur">Please enter a valid email</string>
    <string name="account_erreur">Your account doesn\'t exist or your password is invalid</string>
    <string name="tietnom_erreur">Your name can not be empty and it can\'t be and email address</string>
    <string name="permission_iv">Need the permission</string>
    <string name="profil_maj">You\'re profil has been modified</string>
    <string name="tiet_emaill_erreur">Please enter a valid email</string>
    <string name="mdp_dif">The passwords do not match</string>
    <string name="erreur_auth">Authentication error</string>
    <string name="modArticle">You cannot update an article that you haven\'t created</string>
    <string name="article_erreur">Select an article</string>
    <string name="article_creer">Your article has been created</string>
    <string name="dialog_message">Are you sure that you want to delete the selected article: </string>
    <string name="oui">Yes</string>
    <string name="non">No</string>
    <string name="article_supprimer">The article has been deleted</string>
    <string name="article_supprimer_erreur">An error has occured during the deletion</string>
    <string name="categorie">Category</string>
    <string name="categorie_erreur">You must select a category</string>
    <string name="titre_soustitre_erreur">You must write a title and a subtitle</string>
    <string name="message_erreur">Your message must contain at least 10 characters</string>
    <string name="article_update">The update has been succesful</string>
</resources>